syntax = "proto3";

package infraboard.mpaas.pipeline;
option go_package = "github.com/infraboard/mpaas/apps/pipeline";

import "apps/job/pb/job.proto";
import "apps/task/pb/task.proto";

message PipelineSet {
	// 总数量
	// @gotags: bson:"total" json:"total"
    int64 total = 1;
	// 清单
	// @gotags: bson:"items" json:"items"
    repeated Pipeline items = 2;
}


// 流水线
message Pipeline {
    // 唯一ID
	// @gotags: bson:"_id" json:"id"
    string id = 1;
	// 创建时间
	// @gotags: bson:"create_at" json:"create_at"
	int64 create_at = 2;
	// 更新时间
	// @gotags: bson:"update_at" json:"update_at"
	int64 update_at = 3;
	// 流水线定义
	// @gotags: bson:"spec" json:"spec"
	CreatePipelineRequest spec = 4;
	// 流水线状态
	// @gotags: bson:"status" json:"status"
	Status status = 5;
}

message CreatePipelineRequest {
	// 所属域
	// @gotags: bson:"domain" json:"domain"
	string domain = 1;
	// 所属空间
	// @gotags: bson:"namespace" json:"namespace"
	string namespace = 2;
	// 创建人
	// @gotags: bson:"create_by" json:"create_by"
	string create_by = 3;
    // 名称
	// @gotags: bson:"name" json:"name"
    string name = 4;
	// 描述
	// @gotags: bson:"description" json:"description"
	string description = 5;
	// 具体编排阶段
	// @gotags: bson:"stages" json:"stages"
	repeated Stage stages = 12;
	// 标签
	// @gotags: bson:"labels" json:"labels"
	map<string, string> labels = 15;
}

// Stage todo
message Stage {
    // 名称
	// @gotags: bson:"name" json:"name" validate:"required"
    string name = 1;
	// 运行时 全局参数, 会传递给该stage的每个Task
	// @gotags: bson:"with" json:"with"
	repeated job.RunParam with = 2;
	// 具体任务
	// @gotags: bson:"tasks" json:"tasks"
	repeated task.RunJobRequest tasks = 3;
}

enum STAGE {
	// 等待执行
	PENDDING = 0;
	// 运行中
	ACTIVE = 1;
	// 运行成功
	SUCCEEDED = 2;
	// 运行失败
	FAILED = 3;
}

message Status {
	// 任务当前状态
	// @gotags: bson:"stage" json:"stage"
    STAGE stage = 1;
	// 任务开始时间
	// @gotags: bson:"start_at" json:"start_at"
    int64 start_at = 2;
	// 任务结束时间
	// @gotags: bson:"end_at" json:"end_at"
    int64 end_at = 3;
	// 状态描述
	// @gotags: bson:"message" json:"message"
	string message = 4;
	// 任务状态详细描述, 用于Debug
	// @gotags: bson:"detail" json:"detail"
	StageStatus detail = 5;
}

message StageStatus {
    // 名称
	// @gotags: bson:"name" json:"name" validate:"required"
    string name = 1;
	// stage当前状态
	// @gotags: bson:"stage" json:"stage"
    STAGE stage = 2;
	// 任务状态
	// @gotags: bson:"status" json:"status"
	repeated task.Task status = 3;
}